<resources>
    <string name="app_name">WallpaperApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="login">login</string>
    <string name="dont_have_an_account">don\'t have an account?</string>
    <string name="language">ქართული</string>
    <string name="swipe_to_delete">Swipe To delete</string>
    <string name="home_screen">Home Screen</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="set_as_both">Set As Both</string>
    <string name="set_as">Set As</string>
    <string name="search">Search</string>
    <string name="favourite_number">Favourite Number</string>
    <string name="log_out">log out</string>
    <string name="change_language">Change App Language</string>
    <string name="discovery">Discovery</string>
    <string name="collections">collections</string>
    <string name="favourite">Favourite</string>
    <string name="setting">Setting</string>
    <string name="favourites_empty">Favourites Are Empty</string>
    <string name="user_email">User Email</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="favourites_item_deleted">Favourites item deleted!</string>
    <string name="added_to_favourites">Added To Favourites</string>
    <string name="removed_from_the_favourites">Removed From The Favourites</string>
    <string name="email_cannot_be_empty">Email cannot be empty</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="passwords_are_not_the_same">Passwords Are Not The Same</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="password_must_be_at_least_5_characters_long">Password must be at least 5 characters long</string>
    <string name="no_account_found_with_this_email">No account found with this email.</string>
    <string name="incorrect_password_please_try_again">Incorrect password. Please try again.</string>
    <string name="network_error_please_check_your_internet_connection">Network error. Please check your internet connection.</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="home_screen_image">Home Screen Image</string>
    <string name="lock_screen_image">Lock Screen Image</string>
</resources>





