<?xml version="1.0" encoding="utf-8"?>
  <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/light_purple"
      android:paddingBottom="30dp"
      tools:context=".presentation.bottom_sheet.BottomSheetFragment">


      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tv_home_screen"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="30dp"
          android:text="@string/home_screen"
          android:textColor="@color/white"
          android:textSize="18sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />


      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tv_lock_screen"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          android:text="@string/lock_screen"
          android:textColor="@color/white"
          android:textSize="18sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv_home_screen" />


      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tv_both_screen"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          android:text="@string/set_as_both"
          android:textColor="@color/white"
          android:textSize="18sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv_lock_screen" />


  </androidx.constraintlayout.widget.ConstraintLayout>
